# rigol-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/rigol_mcp/: scope.py  server.py  waveform_analysis.py
